# snakemake-executor-plugin-lsf

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yaml  release-please.yml
conda/: meta.yaml
docs/: further.md  intro.md
snakemake_executor_plugin_lsf/: __init__.py  new_functions.py
tests/: tests.py
