[tool.poetry]
name = "snakemake-executor-plugin-lsf"
version = "0.2.3"
description = "A Snakemake executor plugin for submitting jobs to a LSF cluster."
authors = [
    "Brian Fulton-Howard <brian.fulton-howard@mssm.edu>",
    "Christian Meesters <meesters@uni-mainz.de>",
    "David Lähnemann <david.laehnemann@dkfz-heidelberg.de>",
    "Johannes Koester <johannes.koester@uni-due.de>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/befh/snakemake-executor-plugin-lsf"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/lsf.html"
keywords = ["snakemake", "plugin", "executor", "cluster", "lsf"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.1"
snakemake-interface-executor-plugins = "^9.0.0"
snakemake-executor-plugin-lsf-jobstep = "^0.1.10"
throttler = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
